// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnboardingPages component should render the addResources page 1`] = `
<Fragment>
  <withRouter(TopMenuComponent) />
  <div>
    <AddResources
      handleOnClick={[Function]}
    />
  </div>
</Fragment>
`;

exports[`OnboardingPages component should render the addRooms page 1`] = `
<Fragment>
  <withRouter(TopMenuComponent) />
  <div>
    <AddroomsDesign
      handleOnClick={[Function]}
    />
  </div>
</Fragment>
`;

exports[`OnboardingPages component should render the default page 1`] = `
<Fragment>
  <withRouter(TopMenuComponent) />
  <div />
</Fragment>
`;

exports[`OnboardingPages component should render the officeStructure page 1`] = `
<Fragment>
  <withRouter(TopMenuComponent) />
  <div>
    <OfficeStructure
      handleOnClick={[Function]}
    />
  </div>
</Fragment>
`;

exports[`OnboardingPages component should render the setupLocation page 1`] = `
<Fragment>
  <withRouter(TopMenuComponent) />
  <div />
</Fragment>
`;
